--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
+    "paths": {
+      "ng-tw": [
+        "dist/ng-tw/ng-tw",
+        "dist/ng-tw"
+      ]
+    },
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
