--- a/package.json
+++ b/package.json
@@ -36,5 +36,17 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^13.0.0",
     "typescript": "~4.5.2"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "printWidth": 140,
+    "singleQuote": true,
+    "jsxBracketSameLine": false,
+    "disableLanguages": [
+      "html",
+      "css",
+      "scss"
+    ],
+    "formatOnSave": false
   }
 }
