--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,20 +3,20 @@
     "version": "0.0.0",
     "description": "scripts used for build and release routine",
     "scripts": {
-        "bump": "tsc && node ./.compiled/scripts/bump.js",
-        "bump:major": "tsc && node ./.compiled/scripts/bump-major.js",
-        "bump:minor": "tsc && node ./.compiled/scripts/bump-minor.js",
-        "bump:patch": "tsc && node ./.compiled/scripts/bump-patch.js",
-        "git:tag": "tsc && node ./.compiled/scripts/git-tag.js",
+        "bump": "tsc && node ./.compiled/bump.js",
+        "bump:major": "tsc && node ./.compiled/bump-major.js",
+        "bump:minor": "tsc && node ./.compiled/bump-minor.js",
+        "bump:patch": "tsc && node ./.compiled/bump-patch.js",
+        "git:tag": "tsc && node ./.compiled/git-tag.js",
         "build:dev": "./build.sh",
         "build:prod": "./build-prod.sh",
         "deploy:git": "./deploy-git.sh",
-        "deploy:npm": "tsc && node ./.compiled/scripts/deploy-npm.js",
+        "deploy:npm": "tsc && node ./.compiled/deploy-npm.js",
         "changelog": "cd ../ && conventional-changelog -p angular -i CHANGELOG.md -s",
         "release:major": "./release-major.sh",
         "release:minor": "./release-minor.sh",
         "release:patch": "./release-patch.sh",
-        "tada": "tsc && node ./.compiled/scripts/tada.js"
+        "tada": "tsc && node ./.compiled/tada.js"
     },
     "author": "",
     "license": "ISC",
