--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"@angular/platform-browser-dynamic": "~13.1.0",
 		"@angular/router": "~13.1.0",
 		"lodash": "^4.17.21",
+		"ngx-markdown": "^13.1.0",
+		"prismjs": "^1.27.0",
 		"rxjs": "~7.4.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.11.4"
