--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nguniversal/express-engine": "^13.0.2",
     "express": "^4.15.2",
     "lodash": "^4.17.21",
+    "ngx-google-analytics": "^13.0.1",
     "ngx-markdown": "^13.1.0",
     "prismjs": "^1.27.0",
     "rxjs": "~7.4.0",
