chore(sandbox): release command

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"dev:ssr": "ng run sandbox:serve-ssr",
 		"serve:ssr": "node dist/sandbox/server/main.js",
 		"build:ssr": "ng build && ng run sandbox:server",
-		"prerender": "ng run sandbox:prerender"
+		"prerender": "ng run sandbox:prerender",
+		"sandbox:release": "ng run sandbox:prerender --configuration=production && ng deploy --no-build"
 	},
 	"private": true,
 	"dependencies": {
