--- a/projects/ng-tw/package.json
+++ b/projects/ng-tw/package.json
@@ -2,8 +2,9 @@
 	"name": "ng-tw",
 	"version": "0.0.15",
 	"peerDependencies": {
-		"@angular/common": "^13.1.0",
-		"@angular/core": "^13.1.0"
+		"@angular/common": ">=15.0.0",
+		"@angular/core": ">=15.0.0",
+		"tailwindcss": ">=3.2.4"
 	},
 	"dependencies": {
 		"tslib": "^2.3.0"
